Fixing header text alignment

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,7 +14,8 @@
     display: block;
     color: var(--color-branding-text);
     text-align: center;
-    padding: 1em;
+    padding: 1.2rem 1.2rem 1rem 1.2rem;
     text-decoration: none;
     text-transform: capitalize;
+    line-height: 1.2rem;
 }
